Change of the top-up behaviour in the simulator

--- a/protocol-simulation/protocol-simulator.ipynb
+++ b/protocol-simulation/protocol-simulator.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each trove is defined by its collateral (in ETH), its debt (in gasETH), its initial collateralization ratio and an inattention parameter used to model a \"top-up\" behaviour"
+    "Each trove is defined by a collateral amount (in ETH), a debt amount (in gasETH), an initial collateralization ratio (used to model users' risk profile) and an inattention parameter (used to model a \"top-up\" behaviour)"
    ]
   },
   {
@@ -217,6 +217,13 @@
    "metadata": {},
    "source": [
     "### Draw of users' parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation of parameters : ///"
    ]
   },
   {
